# FichSelecFondGS

./: .gitignore  Fonctions_Risk.py  LecturefichierExcel.py  Scriptfromexcel.py  analysis_modulesDR.py  beta_glissant.py  configDR.py  corr_glissante.py  data_loaderDR.py  drawdown.py  figi_metadata.csv  main.py  mainDR.py  pyproject.toml  reportDR.py  utilsDR.py  utils_reportDR.py
