[project]
name = "fichselecfondgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "linearregression>=0.0.1",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "xlwings>=0.33.16",
]
